# Git-Repo-Organizer

./: .coverage  .env.example  .gitignore  ANTIGRAVITY_SYNC.md  API.md  BACKEND_ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FRONTEND_ARCHITECTURE.md  Frontend.MD  HOW-TO-RUN.md  Makefile  README.md  WORK_DIVISION.MD  conftest.py  deployment_checklist.md  docker-compose.prod.yml  docker-compose.yml  package.json  pnpm-lock.yaml  prompt_phase10_final_fix.md  pytest.ini  sync.md
.claude/: settings.local.json
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  bad_code.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_draft_proposal.py  003_add_status_and_last_gardener_run.py  004_add_idempotency_keys.py
backend/anti-gravity did this/: testing_guide.md
backend/app/: main.py
backend/app/api/: deps.py  routes.py
backend/app/api/routes/: README.md  __init__.py  auth.py  garden.py  health.py  logs.py  portfolio.py  repos.py
backend/app/core/: config.py
backend/app/db/: crud.py  models.py  session.py
backend/app/middleware/: __init__.py  logging.py
backend/app/schemas/: analysis.py  github.py
backend/app/services/: github_client.py  github_service.py  idempotency.py  llm_service.py
backend/app/temporal/: __init__.py  activities.py  middleware.py  worker.py  workflows.py
backend/app/temporal/activities/: README.md  __init__.py  analysis.py  generation.py  github.py  persistence.py  portfolio.py
backend/tests/: test_logging.py
frontend/: Dockerfile  (+6 more)
(+72 files in other folders)
