[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "langgraph>=1.0.7",
    "litellm>=1.72.6",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.9.1",
    "pygithub>=2.8.1",
    "python-dotenv>=1.2.1",
    "sqlmodel>=0.0.22",
    "temporalio>=1.21.1",
    "uvicorn>=0.40.0",
]
